<resources>
	<string name="app_name">Bereshtook</string>
	<string name="app_name_fa">برشتوک</string>
	<string name="me">من</string>
	<string name="conn_title">برشتوک: %s</string>
	<string name="conn_connecting">در حال اتصال به سرور</string>
	<string name="conn_disconnecting">قطع شدن از سرور</string>
	<string name="conn_online">آنلاین</string>
	<string name="conn_offline">آفلاین</string>
	<string name="conn_empty_roster">در حال دریافت لیست برشتوک ها&#8230;
	    (برای بار اول کمی طول می کشد)</string>
	<string name="conn_reconnect">تلاش مجدد برای وصل شدن تا %s ثانیه دیگر</string>
	<string name="conn_disconnected">ارتباط قطع شد</string>
	<string name="conn_no_network">شبکه ایی پیدا نشد</string>
	<string name="conn_authentication_fail">نام کاربری یا رمز عبور اشتباه است</string>
	<string name="conn_conflict">نام کاربری تکراری است</string>
	<string name="Global_Exit">خروج</string>
	<string name="Global_authenticate_first">لطفا ابتدا وصل شوید</string>
	<string name="Global_JID_hint">مثلا: محمد21</string>
	<string name="Global_JID_malformed">نام کاربری خوب نیست</string>
	<string name="space_is_no_allowed">استفاده از فاصله مجاز نیست</string>
	<string name="min_char_is_4">حداقل ۴ حرف</string>
	<string name="StartupDialog_Title">به برشتوک خوش آمدید</string>
	<string name="StartupDialog_Summary">اطلاعات ورود به برشتوک</string>
	<string name="StartupDialog_pwHint">مثلا: ۴۱۲۳۹۷</string>
	<string name="StartupDialog_pwrHint">تکرار رمز</string>
	<string name="StartupDialog_Username_title">نام برشتوکی</string>
	<string name="StartupDialog_passwd_title">رمز(حداقل ۶ کاراکتر)</string>
	<string name="StartupDialog_advanced">پیشرفته…</string>
	<string name="StartupDialog_create_new">کاربر جدید هستم</string>
	<string name="StartupDialog_error_password">رمزها مطابقت ندارند</string>
	<string name="no_internet_connection">اینترنت وصل نیست</string>
	<string name="notification_message">پیام جدید از %s</string>
	<string name="notification_anonymous_message">Message received</string>
	<string name="notification_error">Error while sending message!</string>
	<string name="preftitle_notify">Message Notification</string>
	<string name="led_title">Blinking LED</string>
	<string name="led_summ">Blink phone LED on incoming messages</string>
	<string name="vibr_title">Vibration</string>
	<string name="vibr_summ">Vibrate on incoming messages</string>
	<string-array name="vibr_values_displayed">
		<item>Never</item>
		<item>System preference</item>
		<item>Always</item>
	</string-array>
	<string name="ringtone_title">Ringtone</string>
	<string name="ringtone_summ">Tone for incoming messages</string>
	<string name="ticker_title">Message preview</string>
	<string name="ticker_summ">Show sender and message in status bar</string>
	<string name="preftitle_boot">Startup Options</string>
	<string name="statuspopup_name">وضیعت شما</string>
	<string name="showOffline_summ">Always show all contacts in the roster</string>
	<string name="showOffline_title">Show offline contacts</string>
	<string name="enableGroups_summ">Arrange your contacts by their groups</string>
	<string name="enableGroups_title">Show contact groups</string>
	<string name="foregroundService_summ">Keep yaxim in memory to ensure always-on connection (foreground service)</string>
	<string name="foregroundService_title">Statusbar icon</string>
	<string name="preftitle_debug">Debugging</string>
	<string name="smackdebug_summ">Packet and debug output via logcat (may contain personal information)</string>
	<string name="smackdebug_title">SMACK debugging</string>
	<string name="reportcrash_title">Send crash reports</string>
	<string name="reportcrash_summ">Send anonymous crash reports to developer</string>
	<string name="preftitle_app">Appearance</string>
	<string name="FontChat_title">Chat font size</string>
	<string name="FontChat_summ">Set chat font size</string>
	<string name="FontChat_dialog">Chat font size</string>
	<string name="pref_theme">Theme</string>
	<string-array name="pref_theme_entries">
		<item>Dark</item>
		<item>Light</item>
	</string-array>
	<string name="preftitle_ui">Appearance</string>
	<string-array name="fontSizesChat">
		<item>small</item>
		<item>normal</item>
		<item>large</item>
		<item>huge</item>
	</string-array>
	<string name="menu_addFriend">مخاطب جدید</string>
	<string name="menu_showOff">نمایش آفلاین ها</string>
	<string name="menu_hideOff">نمایش ندادن آفلاین ها</string>
	<string name="menu_accSettings">ویرایش اکانت</string>
	<string name="menu_settings">تنظیمات</string>
	<string name="menu_account">حساب کاربری</string>
	<string name="menu_scoreboard">برترین ها</string>
	<string name="menu_status">وضیعت</string>
	<string name="menu_connect">اتصال</string>
	<string name="menu_disconnect">قطع ارتباط</string>
	<string name="menu_about">درباره برشتوک</string>
	<string name="menu_search">جستجو</string>
	<string name="top_bereshtooks">برترین برشتوک ها</string>
	<string name="win_percent">درصد پیروزی</string>
	<string name="wins_num">تعداد پیروزی</string>
	<string name="coins_num">تعداد سکه</string>
	<string name="tops_loading">در حال گرفتن آخرین اطلاعات&#8230;</string>
	<string name="creating_account">در حال ساختن یه برشتوک جدید&#8230;</string>
	<string name="connecting_bereshtook">در حال برقراری ارتباط با سرور&#8230;</string>
	<string name="error_fetch_data">خطا در گرفتن اطلاعات</string>
	<string name="rank">رتبه</string>
	<string name="bereshtook_user">نام برشتوک</string>
	<string name="my_wins_num">تعداد پیروزی من:</string>
	<string name="my_coins_num">تعداد سکه های من:</string>
	<string name="my_win_percent">درصد پیروزی من:</string>
	<string name="addFriend_Title">Add a Contact</string>
	<string name="addFriend_Summ">Please enter the Jabber ID of your friend, the
		desired screen name and choose their contact group!</string>
	<string name="addFriend_aliasHint">Screen name</string>
	<string name="addrosteritemaddgroupchoice">Add to a new group</string>
	<string name="NewGroup_EditTextField_Hint">Name for the new group</string>
	<string name="roster_contextmenu_title">گزینه ها %s</string>
	<string name="roster_contextmenu_group_rename">Rename group</string>
	<string name="roster_contextmenu_contact_mark_all_as_read">Mark all messages as read</string>
	<string name="roster_contextmenu_contact_delete">Delete Contact</string>
	<string name="roster_contextmenu_contact_delmsg">پاک کردن گفتگو ها</string>
	<string name="roster_contextmenu_contact_open_chat">Open Chat</string>
	<string name="roster_contextmenu_contact_rename">Rename</string>
	<string name="roster_contextmenu_contact_request_auth">Request Authorization</string>
	<string name="roster_contextmenu_move_to_friends">اضافه کردن به دوستان</string>
	<string name="roster_contextmenu_move_to_bereshtooks">حذف کردن از دوستان</string>
	<string name="account_settings_login">Login Information</string>
	<string name="account_settings_title">Account Settings</string>
	<string name="account_options_title">Connecting Options</string>
	<string name="account_options_advanced">Advanced Options</string>
	<string name="connstartup_title">Connect at Startup</string>
	<string name="connstartup_summOn">Go online when yaxim is opened</string>
	<string name="connstartup_summOff">Do not automatically connect</string>
	<string name="carbons_title">Message Carbons (XEP-0280)</string>
	<string name="carbons_summ">Request message copies from your other client(s)</string>
	<string name="account_jabberID_title">Jabber ID</string>
	<string name="account_jabberID_sum">example: me@jabber.example.com</string>
	<string name="account_jabberID_dialog_title">Enter your Jabber ID:</string>
	<string name="account_jabberPW_title">Account Password</string>
	<string name="account_jabberPW_sum">Your Jabber account password</string>
	<string name="account_jabberPW_dialog_title">Enter password:</string>
	<string name="account_resource_title">Client Resource</string>
	<string name="account_resource_summ">Default: yaxim</string>
	<string name="account_resource_dialog_title">Enter your resource:</string>
	<string name="account_resource_hint">yaxim</string>
	<string name="account_prio_title">Client Priority</string>
	<string name="account_prio_summ">Default: 0 (allowed: -128 .. 127)</string>
	<string name="account_prio_error">Allowed values: -128 .. 127</string>
	<string name="account_prio_dialog_title">Enter your priority:</string>
	<string name="account_port_title">Server Port</string>
	<string name="account_port_sum">Default: 5222</string>
	<string name="account_port_dialog_title">Enter the server port:</string>
	<string name="account_port_hint">5222</string>
	<string name="account_customserver_title">Custom Server</string>
	<string name="account_customserver_summ">(Optional) alternative server hostname</string>
	<string name="account_customserver_dialog_title">Enter server hostname:</string>
	<string name="account_customserver_hint">host.example.com</string>
	<string name="require_ssl_title">Require SSL/TLS</string>
	<string name="require_ssl_summ">Always encrypt server connection</string>
	<string name="AddContact_SpinnerPrompt">Choose Group</string>
	<string name="setStatusmsgHint">Your status message</string>
	<string name="setStatusTitle">Set your status</string>
	<string name="RenameGroup_summ">Rename group %s to:</string>
	<string name="RenameGroup_title">Rename group</string>
	<string name="RenameEntry_summ">Rename %1$s (%2$s) to: </string>
	<string name="RenameEntry_title">Rename contact</string>
	<string name="MoveRosterEntryToGroupDialog_summ">Select a group from the spinner below</string>
	<string name="MoveRosterEntryToGroupDialog_title">Change group</string>
	<string name="deleteRosterItem_text">Really remove %1$s (%2$s)?</string>
	<string name="deleteRosterItem_title">Delete Contact</string>
	<string name="deleteChatHistory_text">آیا از پاک کردن گفتگو های %1$s مطمئن هستید؟</string>
	<string name="deleteChatHistory_title">پاک کردن گفتگو ها</string>
	<string name="subscriptionRequest_text">%1$s wants to add you as a contact: \"%2$s\"</string>
	<string name="subscriptionRequest_title">Subscription Request</string>
	<string name="chat_from_me">Me:</string>
	<string name="toast_connectfail_message">Connection closed!</string>
	<string name="toast_stored_offline">The message has been stored for transmission.</string>
	<string name="chat_enterMsgHint">Enter message</string>
	<string name="chatmenu_copy">کپی</string>
	<string name="chatmenu_resend">ارسال مجدد</string>
	<string name="AboutDialog_title">درباره برشتوک</string>
	<string name="AboutDialog_DevelopersTitle">توسعه دهنده</string>
	<string name="AboutDialog_LicenceTitle">Licensing</string>
	<string name="AboutDialog_Vote">Give Feedback</string>
	<string name="AboutDialog_LicenceText">گروه انگور سیاه</string>
	<string name="email">bereshtook.app@gmail.com</string>
	<string name="status_available">آنلاین</string>
	<string name="status_away">نیستم</string>
	<string name="status_chat">آماده صحبت</string>
	<string name="status_dnd">مزاحم نشوید</string>
	<string name="status_xa">در دسترس نیستم</string>
	<string name="status_offline">آفلاین</string>
	<string name="translator_credits">translator-credits</string>
	<string name="default_group">نامشخص</string>
	<string name="chooseContact">یک مخاطب را انتخاب کن</string>
	<string name="friends_group">دوستان</string>
	<string name="meter">متر</string>
	<string name="kilometer">کیلومتر</string>
	<string name="shop_bereshtook">فروشگاه برشتوک</string>
	<string name="coin">سکه</string>
	<string name="current_amount_coins">شما در حال حاضر %s سکه دارید</string>
	<string name="coin_info_description">برای بدست آوردن سکه میتوانید بازی کنید و برنده شوید یا سکه بخرید.</string>
	<string name="coin_pack1_desc">۵۰۰ سکه فقط ۵۰۰ تومان</string>
	<string name="coin_pack2_desc">۱۰۰۰ سکه فقط ۹۰۰ تومان</string>
	<string name="coin_pack3_desc">۲۰۰۰ سکه فقط ۱۵۰۰ تومان</string>
	<string name="coin_pack4_desc">۹۰۰۰ سکه فقط ۴۰۰۰ تومان</string>
	<string name="play_request">بازی</string>
</resources>