<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/menu_scoreboard" android:title="@string/menu_scoreboard"
		android:alphabeticShortcut="s" android:icon="@android:drawable/ic_menu_myplaces"
		android:showAsAction="always"/>	
		    
	<item android:id="@+id/menu_coins" android:title="@string/coin"
		android:alphabeticShortcut="o"
		android:icon="@drawable/ic_coins"
		android:showAsAction="always"/>
		
	<item android:id="@+id/menu_connect" android:title="@string/menu_connect"
		android:alphabeticShortcut="c"
		android:icon="@drawable/ic_menu_plug"
		android:showAsAction="never"/>
	
		<item android:id="@+id/menu_show_hide" android:title="@string/menu_hideOff"
		android:alphabeticShortcut="o"
		android:showAsAction="never"/>
	
	<item android:id="@+id/menu_status" android:title="@string/menu_status"
		android:icon="@android:drawable/ic_menu_myplaces"
		android:showAsAction="never"
		android:visible="false"/>

	<item android:id="@+id/menu_account" android:title="@string/menu_account"
	    android:showAsAction="never" />

	<item android:id="@+id/menu_about" android:title="@string/menu_about"
		android:icon="@drawable/about" />

	<item android:id="@+id/menu_exit" android:title="@string/Global_Exit"
		android:icon="@android:drawable/ic_menu_close_clear_cancel" />
	
	
	<item android:id="@+id/menu_add_friend" android:title="@string/menu_addFriend"
		android:icon="@android:drawable/ic_menu_add"
		android:visible="false" />
	
	<item android:id="@+id/menu_settings" android:title="@string/menu_settings"
		android:icon="@android:drawable/ic_menu_preferences"
		android:visible="false" />	
</menu>
