<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent"
	android:orientation="vertical"
	>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawableLeft="@drawable/ic_launcher"
			android:drawablePadding="10sp"
			android:text="@string/AboutDialog_DevelopersTitle"
			android:textSize="20sp"
			android:padding="10sp"
			style="?attr/dialogTextColor"
			/>

		<TextView
		    style="?attr/dialogTextColor"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp"
		    android:text="@string/AboutDialog_LicenceText" />
		
		<TextView
		    style="?attr/dialogTextColor"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="10dp"
		    android:text="@string/email" />

</LinearLayout>	
