
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:gravity="right"
    >
 
    <LinearLayout
        android:id="@+id/my_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        >

     <TextView
         android:id="@+id/my_rank"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
     
     <TextView
         android:id="@+id/my_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
		 android:layout_margin="5dp"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
     </LinearLayout>
     
    
    
	<LinearLayout android:id="@+id/header"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_below="@id/my_info"
	    android:layout_marginTop="10dp"
	    android:background="@color/tops_header_background"
	     >
	    <TextView
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:text="@string/rank"
	        />
	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:layout_gravity="center"
	        android:gravity="center"
	         android:text="@string/bereshtook_user"
	        />    
	    <TextView
	        android:id="@+id/score"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:text="@string/wins_num"        
	        />
	</LinearLayout>
    
     
     <ListView
        android:id="@+id/tops_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header"
        android:textAlignment="center"
        />     
 
</RelativeLayout>