<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">
    
    <ImageView android:id="@+id/screen_wait"
       android:src="@drawable/wait" 
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:layout_gravity="center" android:visibility="gone" />
        
	<LinearLayout android:id="@+id/screen_main"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:gravity="right"
	    >
	    
    <TextView
        android:id="@+id/current_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
         />	    
	    
    <TextView
        android:id="@+id/coin_info_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/coin_info_description" />

    <RelativeLayout
        android:id="@+id/coins_pack1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
       	android:onClick="onClickPack1"
       	android:padding="10dp">

	    <ImageView
	        android:id="@+id/img_coins_pack1"
	        android:layout_width="70dp"
	        android:layout_height="70dp"
	        android:layout_alignParentRight="true"
	        android:src="@raw/coins_pack1"/>
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@id/img_coins_pack1"
	        android:layout_alignTop="@id/img_coins_pack1"
	        android:layout_alignBottom="@id/img_coins_pack1"
	        android:gravity="center_vertical"
	        android:text="@string/coin_pack1_desc"
	        android:singleLine="true"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	/>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/coins_pack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
       	android:onClick="onClickPack2"
       	android:padding="10dp" >

	    <ImageView
	        android:id="@+id/img_coins_pack2"
	        android:layout_width="70dp"
	        android:layout_height="70dp"
	        android:layout_alignParentRight="true"
	        android:src="@raw/coins_pack2" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@id/img_coins_pack2"
	        android:layout_alignTop="@id/img_coins_pack2"
	        android:layout_alignBottom="@id/img_coins_pack2"
	        android:gravity="center_vertical"
	        android:text="@string/coin_pack2_desc"
	        android:singleLine="true"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	/>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/coins_pack3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
       	android:onClick="onClickPack3" 
       	android:padding="10dp" >

	    <ImageView
	        android:id="@+id/img_coins_pack3"
	        android:layout_width="70dp"
	        android:layout_height="70dp"
	        android:layout_alignParentRight="true"
	        android:src="@raw/coins_pack3"/>
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@id/img_coins_pack3"
	        android:layout_alignTop="@id/img_coins_pack3"
	        android:layout_alignBottom="@id/img_coins_pack3"
	        android:gravity="center_vertical"
	        android:text="@string/coin_pack3_desc"
	        android:singleLine="true"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/coins_pack4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
       	android:onClick="onClickPack4"
       	android:padding="10dp" >

	    <ImageView
	        android:id="@+id/img_coins_pack4"
	        android:layout_width="70dp"
	        android:layout_height="70dp"
	        android:layout_alignParentRight="true"
	        android:src="@raw/coins_pack4"/>
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@id/img_coins_pack4"
	        android:layout_alignTop="@id/img_coins_pack4"
	        android:layout_alignBottom="@id/img_coins_pack4"
	        android:gravity="center_vertical"
	        android:text="@string/coin_pack4_desc"
	        android:singleLine="true"
			android:textAppearance="?android:attr/textAppearanceLarge"
			/>
    </RelativeLayout> 

</LinearLayout>
</FrameLayout>
